--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "serve -s build"
+    "serve": "npm run build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://ng-blogs-services.herokuapp.com"
+  }
 }
